--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Pari Match | Test task for CLICABLE</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
 
 <header class="header"></header>
 
-<main class="content"></main>
+<main class="content">
+    <h1 class="title">Pari Match</h1>
+</main>
 
 <footer class="footer"></footer>
+
+<script src="scripts/lib/jquery-3.4.1.min.js" type="application/javascript"></script>
+<script src="scripts/main.js" type="application/javascript"></script>
 
 </body>
 </html>
