--- a/index.html
+++ b/index.html
@@ -7,10 +7,35 @@
 </head>
 <body>
 
-<header class="header"></header>
+<div class="background">
+
+    <div class="dirt"></div>
+
+    <div class="bullets"></div>
+
+    <div class="pluses">
+        <div class="top"></div>
+        <div class="left"></div>
+        <div class="right"></div>
+    </div>
+
+    <div class="persons">
+
+    </div>
+
+</div>
+
+<header class="header">
+    <div class="logo">
+        <img src="images/header-main-logo.png" alt="Pari Match logo">
+    </div>
+    <div class="rightSide">
+        <img src="images/header-right-logo.png" alt="Pari Match logo">
+    </div>
+</header>
 
 <main class="content">
-    <h1 class="title">Pari Match</h1>
+    <div class="container"></div>
 </main>
 
 <footer class="footer"></footer>
