First responsive commit

--- a/src/index.html
+++ b/src/index.html
@@ -18,27 +18,131 @@
         <div class="left"></div>
         <div class="right"></div>
     </div>
+    <div class="header-response"></div>
+    <div class="prefooter-section"></div>
 
     <div class="persons">
-
+        <div class="person tracer">
+            <img src="images/persons/tracer.png" alt="tracer">
+        </div>
+        <div class="person pubg">
+            <img src="images/persons/pubg.png" alt="pubg">
+        </div>
+        <div class="person jugg">
+            <img src="images/persons/jugg.png" alt="jugg">
+        </div>
     </div>
 
 </div>
 
 <header class="header">
     <div class="logo">
-        <img src="images/header-main-logo.png" alt="Pari Match logo">
+        <img src="images/header/header-main-logo.png" alt="Pari Match logo">
     </div>
     <div class="rightSide">
-        <img src="images/header-right-logo.png" alt="Pari Match logo">
+        <img src="images/header/header-right-logo.png" alt="Pari Match logo">
     </div>
 </header>
 
 <main class="content">
-    <div class="container"></div>
+    <div class="container">
+
+        <div class="text">
+            <div class="box-content">
+                <div class="title-sport__box">
+                    <h3 class="title-sport">Ставки на киберспорт</h3>
+                </div>
+                <div class="bonus-box">
+                    <h2 class="bonus-name">Бонус</h2>
+                    <h2 class="bonus-price">2500Р</h2>
+                    <div class="letter-bonus"></div>
+                    <div class="letter-bonus__white"></div>
+                    
+
+                </div>
+                <div class="info-box">
+                    <h3 class="registration-info">При Регистрации</h3>
+
+                </div>
+                <div class="btn-registration">
+                    <a href="#" class="btn-link">Зарегистрироваться</a>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="steps">
+            <ul class="steps-wrap">
+                <li class="step">
+                    <div class="icon">
+                        <div class="number">1</div>
+                    </div>
+                    <div class="title">Зарегистрируйся</div>
+                </li>
+                <li class="step">
+                    <div class="icon-middle">
+                        <div class="number">2</div>
+                    </div>
+                    <div class="title">Внеси депозит</div>
+                </li>
+                <li class="step">
+                    <div class="icon-last">
+                        <div class="number">3</div>
+                    </div>
+                    <div class="title">Получи бонус</div>
+                </li>
+            </ul>
+        </div>
+
+    </div>
+    <div class="copyright-box">
+        <h3 class="copyright-title">По результатам незавесимой премии Вк awards 2019</h3>
+    </div>
 </main>
 
-<footer class="footer"></footer>
+<footer class="footer">
+    <div class="left-col">
+        <div class="payments">
+            <a href="#">
+                <img src="images/footer/left/payments/icon-visa.png" alt="visa" class="icon">
+            </a>
+            <a href="#">
+                <img src="images/footer/left/payments/icon-master.png" alt="mastercard" class="icon">
+            </a>
+            <a href="#">
+                <img src="images/footer/left/payments/icon-qiwi.png" alt="qiwi" class="icon">
+            </a>
+            <a href="#">
+                <img src="images/footer/left/payments/icon-ya.png" alt="yandex" class="icon">
+            </a>
+        </div>
+    </div>
+    <div class="center-clo">
+        <div class="download">
+            <a href="#">
+                <img src="images/footer/center/download/icon-appstore.png" alt="googleplay" class="icon">
+            </a>
+            <a href="#">
+                <img src="images/footer/center/download/icon-google.png" alt="appstore" class="icon">
+            </a>
+
+        </div>
+    </div>
+    <div class="right-col">
+        <img src="images/footer/right/icon-18.png" alt="18+" class="icon age">
+        <div class="socials">
+            <a href="#">
+                <img src="images/footer/right/socials/icon-vk.png" alt="" class="icon">
+            </a>
+            <a href="#">
+                <img src="images/footer/right/socials/icon-tw.png" alt="" class="icon">
+            </a>
+            <a href="#">
+                <img src="images/footer/right/socials/icon-inst.png" alt="" class="icon">
+            </a>
+        </div>
+    </div>
+</footer>
 
 <script src="scripts/lib/jquery-3.4.1.min.js" type="application/javascript"></script>
 <script src="scripts/main.js" type="application/javascript"></script>
