Second responsive commit

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pari Match | Test task for CLICABLE</title>
+    <title>Pari Match | Test task for CLICkABLE</title>
     <link href="styles.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width; initial-scale=1.0">
 </head>
 <body>
 
@@ -19,7 +20,7 @@
         <div class="right"></div>
     </div>
     <div class="header-response"></div>
-    <div class="prefooter-section"></div>
+
 
     <div class="persons">
         <div class="person tracer">
@@ -57,7 +58,7 @@
                     <h2 class="bonus-price">2500Р</h2>
                     <div class="letter-bonus"></div>
                     <div class="letter-bonus__white"></div>
-                    
+
 
                 </div>
                 <div class="info-box">
@@ -95,9 +96,16 @@
         </div>
 
     </div>
-    <div class="copyright-box">
-        <h3 class="copyright-title">По результатам незавесимой премии Вк awards 2019</h3>
+    <div class="responsive-section">
+        <div class="container">
+            <div class="prefooter-section"></div>
+            <div class="copyright-box">
+                <h3 class="copyright-title">По результатам незавесимой премии Вк awards 2019</h3>
+            </div>
+        </div>
     </div>
+
+
 </main>
 
 <footer class="footer">
@@ -142,6 +150,52 @@
             </a>
         </div>
     </div>
+
+    <div class="footer-responsive">
+        <div class="left-col__responsive">
+            <div class="age-section">
+                <img src="images/footer/right/icon-18.png" alt="18+" class="age-icon">
+            </div>
+        </div>
+
+        <div class="center-col__responsive">
+            <div class="download__responsive">
+                <a href="#">
+                    <img src="images/footer/center/download/icon-appstore.png" alt="googleplay"
+                         class="icon__responsive">
+                </a>
+                <a href="#">
+                    <img src="images/footer/center/download/icon-google.png" alt="appstore" class="icon__responsive">
+                </a>
+            </div>
+            <div class="payments__responsive">
+                <a href="#">
+                    <img src="images/footer/left/payments/icon-visa.png" alt="visa" class="icon">
+                </a>
+                <a href="#">
+                    <img src="images/footer/left/payments/icon-master.png" alt="mastercard" class="icon">
+                </a>
+                <a href="#">
+                    <img src="images/footer/left/payments/icon-qiwi.png" alt="qiwi" class="icon">
+                </a>
+                <a href="#">
+                    <img src="images/footer/left/payments/icon-ya.png" alt="yandex" class="icon">
+                </a>
+            </div>
+        </div>
+        <div class="right-col__responsive">
+            <div class="social__responsive">
+                <a href="#">
+                    <img src="images/footer/right/socials/icon-vk.png" alt="" class="icon">
+                </a>
+                <a href="#">
+                    <img src="images/footer/right/socials/icon-tw.png" alt="" class="icon">
+                </a>
+                <a href="#">
+                    <img src="images/footer/right/socials/icon-inst.png" alt="" class="icon">
+                </a>
+            </div>
+        </div>
 </footer>
 
 <script src="scripts/lib/jquery-3.4.1.min.js" type="application/javascript"></script>
