--- a/src/index.html
+++ b/src/index.html
@@ -74,23 +74,23 @@
 
         <div class="steps">
             <ul class="steps-wrap">
-                <li class="step">
+                <li class="step step-registration ">
                     <div class="icon">
                         <div class="number">1</div>
                     </div>
                     <div class="title">Зарегистрируйся</div>
                 </li>
-                <li class="step">
+                <li class="step step-deposit">
                     <div class="icon-middle">
                         <div class="number">2</div>
                     </div>
                     <div class="title">Внеси депозит</div>
                 </li>
-                <li class="step">
+                <li class="step step-bonus">
                     <div class="icon-last">
                         <div class="number">3</div>
                     </div>
-                    <div class="title">Получи бонус</div>
+                    <div class="title title-last">Получи бонус</div>
                 </li>
             </ul>
         </div>
@@ -112,16 +112,16 @@
     <div class="left-col">
         <div class="payments">
             <a href="#">
-                <img src="images/footer/left/payments/icon-visa.png" alt="visa" class="icon">
+                <img src="images/footer/left/payments/icon-visa.png" alt="visa" class="icon icon-visa">
             </a>
             <a href="#">
-                <img src="images/footer/left/payments/icon-master.png" alt="mastercard" class="icon">
+                <img src="images/footer/left/payments/icon-master.png" alt="mastercard" class="icon icon-master">
             </a>
             <a href="#">
-                <img src="images/footer/left/payments/icon-qiwi.png" alt="qiwi" class="icon">
+                <img src="images/footer/left/payments/icon-qiwi.png" alt="qiwi" class="icon icon-qiwi">
             </a>
             <a href="#">
-                <img src="images/footer/left/payments/icon-ya.png" alt="yandex" class="icon">
+                <img src="images/footer/left/payments/icon-ya.png" alt="yandex" class="icon icon-yandex">
             </a>
         </div>
     </div>
@@ -140,13 +140,13 @@
         <img src="images/footer/right/icon-18.png" alt="18+" class="icon age">
         <div class="socials">
             <a href="#">
-                <img src="images/footer/right/socials/icon-vk.png" alt="" class="icon">
+                <img src="images/footer/right/socials/icon-vk.png" alt="" class="icon vk-icon">
             </a>
             <a href="#">
-                <img src="images/footer/right/socials/icon-tw.png" alt="" class="icon">
+                <img src="images/footer/right/socials/icon-tw.png" alt="" class="icon twitter-icon">
             </a>
             <a href="#">
-                <img src="images/footer/right/socials/icon-inst.png" alt="" class="icon">
+                <img src="images/footer/right/socials/icon-inst.png" alt="" class="icon inst-icon">
             </a>
         </div>
     </div>
@@ -170,33 +170,35 @@
             </div>
             <div class="payments__responsive">
                 <a href="#">
-                    <img src="images/footer/left/payments/icon-visa.png" alt="visa" class="icon">
+                    <img src="images/footer/left/payments/icon-visa.png" alt="visa" class="icon icon-visa">
                 </a>
                 <a href="#">
-                    <img src="images/footer/left/payments/icon-master.png" alt="mastercard" class="icon">
+                    <img src="images/footer/left/payments/icon-master.png" alt="mastercard" class="icon icon-master">
                 </a>
                 <a href="#">
-                    <img src="images/footer/left/payments/icon-qiwi.png" alt="qiwi" class="icon">
+                    <img src="images/footer/left/payments/icon-qiwi.png" alt="qiwi" class="icon icon-qiwi"">
                 </a>
                 <a href="#">
-                    <img src="images/footer/left/payments/icon-ya.png" alt="yandex" class="icon">
+                    <img src="images/footer/left/payments/icon-ya.png" alt="yandex" class="icon icon-yandex">
                 </a>
             </div>
         </div>
         <div class="right-col__responsive">
             <div class="social__responsive">
                 <a href="#">
-                    <img src="images/footer/right/socials/icon-vk.png" alt="" class="icon">
+                    <img src="images/footer/right/socials/icon-vk.png" alt="" class="icon icon-vk">
                 </a>
                 <a href="#">
-                    <img src="images/footer/right/socials/icon-tw.png" alt="" class="icon">
+                    <img src="images/footer/right/socials/icon-tw.png" alt="" class="icon icon-twitter">
                 </a>
                 <a href="#">
-                    <img src="images/footer/right/socials/icon-inst.png" alt="" class="icon">
+                    <img src="images/footer/right/socials/icon-inst.png" alt="" class="icon icon-inst">
                 </a>
             </div>
         </div>
+    </div>
 </footer>
+
 
 <script src="scripts/lib/jquery-3.4.1.min.js" type="application/javascript"></script>
 <script src="scripts/main.js" type="application/javascript"></script>
