--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,13 @@
 <div class="background">
 
     <div class="dirt"></div>
-
     <div class="bullets"></div>
-
     <div class="pluses">
         <div class="top"></div>
         <div class="left"></div>
         <div class="right"></div>
     </div>
     <div class="header-response"></div>
-
-
     <div class="persons">
         <div class="person tracer">
             <img src="images/persons/tracer.png" alt="tracer">
@@ -37,43 +33,64 @@
 </div>
 
 <header class="header">
+
     <div class="logo">
         <img src="images/header/header-main-logo.png" alt="Pari Match logo">
     </div>
     <div class="rightSide">
         <img src="images/header/header-right-logo.png" alt="Pari Match logo">
     </div>
+
 </header>
 
 <main class="content">
+
     <div class="container">
 
         <div class="text">
             <div class="box-content">
+
                 <div class="title-sport__box">
                     <h3 class="title-sport">Ставки на киберспорт</h3>
                 </div>
                 <div class="bonus-box">
-                    <h2 class="bonus-name">Бонус</h2>
-                    <h2 class="bonus-price">2500Р</h2>
-                    <div class="letter-bonus"></div>
-                    <div class="letter-bonus__white"></div>
 
+                    <div class="glitches-wrap">
+                        <div class="glitches">
+
+                            <div class="first"></div>
+                            <div class="second"></div>
+                            <div class="third"></div>
+                            <div class="four"></div>
+                            <div class="five"></div>
+                            <div class="six"></div>
+                            <div class="seven"></div>
+                            <div class="eight"></div>
+                            <div class="nine"></div>
+                            <div class="ten"></div>
+                            <div class="eleven"></div>
+                            <div class="twelve"></div>
+                            <div class="thirteen"></div>
+
+                        </div>
+                    </div>
+                    <h2 class="bonus-name">Бонус</h2>
+                    <h2 class="bonus-price">2500₽</h2>
 
                 </div>
                 <div class="info-box">
                     <h3 class="registration-info">При Регистрации</h3>
 
                 </div>
-                <div class="btn-registration">
-                    <a href="#" class="btn-link">Зарегистрироваться</a>
+                <a href="#" target="_self" class="btn-registration">
+                    <div class="title">Зарегистрироваться</div>
+                </a>
 
-                </div>
             </div>
         </div>
-
         <div class="steps">
             <ul class="steps-wrap">
+
                 <li class="step step-registration ">
                     <div class="icon">
                         <div class="number">1</div>
@@ -92,6 +109,7 @@
                     </div>
                     <div class="title title-last">Получи бонус</div>
                 </li>
+
             </ul>
         </div>
 
@@ -105,10 +123,10 @@
         </div>
     </div>
 
-
 </main>
 
 <footer class="footer">
+
     <div class="left-col">
         <div class="payments">
             <a href="#">
@@ -125,7 +143,7 @@
             </a>
         </div>
     </div>
-    <div class="center-clo">
+    <div class="center-col">
         <div class="download">
             <a href="#">
                 <img src="images/footer/center/download/icon-appstore.png" alt="googleplay" class="icon">
@@ -150,7 +168,6 @@
             </a>
         </div>
     </div>
-
     <div class="footer-responsive">
         <div class="left-col__responsive">
             <div class="age-section">
@@ -176,7 +193,7 @@
                     <img src="images/footer/left/payments/icon-master.png" alt="mastercard" class="icon icon-master">
                 </a>
                 <a href="#">
-                    <img src="images/footer/left/payments/icon-qiwi.png" alt="qiwi" class="icon icon-qiwi"">
+                    <img src="images/footer/left/payments/icon-qiwi.png" alt="qiwi" class="icon icon-qiwi">
                 </a>
                 <a href="#">
                     <img src="images/footer/left/payments/icon-ya.png" alt="yandex" class="icon icon-yandex">
@@ -197,8 +214,8 @@
             </div>
         </div>
     </div>
-</footer>
 
+</footer>
 
 <script src="scripts/lib/jquery-3.4.1.min.js" type="application/javascript"></script>
 <script src="scripts/main.js" type="application/javascript"></script>
