--- a/src/index.html
+++ b/src/index.html
@@ -91,20 +91,20 @@
         <div class="steps">
             <ul class="steps-wrap">
 
-                <li class="step step-registration ">
+                <li class="step">
                     <div class="icon">
                         <div class="number">1</div>
                     </div>
                     <div class="title">Зарегистрируйся</div>
                 </li>
-                <li class="step step-deposit">
-                    <div class="icon-middle">
+                <li class="step">
+                    <div class="icon">
                         <div class="number">2</div>
                     </div>
                     <div class="title">Внеси депозит</div>
                 </li>
-                <li class="step step-bonus">
-                    <div class="icon-last">
+                <li class="step">
+                    <div class="icon">
                         <div class="number">3</div>
                     </div>
                     <div class="title title-last">Получи бонус</div>
