--- a/src/index.html
+++ b/src/index.html
@@ -215,6 +215,51 @@
         </div>
     </div>
 
+
+    <div class="footer-mobile">
+        <div class="center-col__mobile">
+            <div class="download__mobile">
+                <a href="#">
+                    <img src="images/footer/center/download/icon-appstore.png" alt="googleplay"
+                         class="icon__mobile">
+                </a>
+                <a href="#">
+                    <img src="images/footer/center/download/icon-google.png" alt="appstore" class="icon__mobile">
+                </a>
+            </div>
+        </div>
+        <div class="right-col__mobile">
+            <div class="social__mobile">
+                <a href="#">
+                    <img src="images/footer/right/socials/icon-vk.png" alt="" class="icon icon-vk">
+                </a>
+                <a href="#">
+                    <img src="images/footer/right/socials/icon-tw.png" alt="" class="icon icon-twitter">
+                </a>
+                <a href="#">
+                    <img src="images/footer/right/socials/icon-inst.png" alt="" class="icon icon-inst">
+                </a>
+            </div>
+        </div>
+        <div class="payments__mobile">
+            <div class="age-section">
+                <img src="images/footer/right/icon-18.png" alt="18+" class="age-icon">
+            </div>
+            <a href="#">
+                <img src="images/footer/left/payments/icon-visa.png" alt="visa" class="icon icon-visa">
+            </a>
+            <a href="#">
+                <img src="images/footer/left/payments/icon-master.png" alt="mastercard" class="icon icon-master">
+            </a>
+            <a href="#">
+                <img src="images/footer/left/payments/icon-qiwi.png" alt="qiwi" class="icon icon-qiwi">
+            </a>
+            <a href="#">
+                <img src="images/footer/left/payments/icon-ya.png" alt="yandex" class="icon icon-yandex">
+            </a>
+        </div>
+    </div>
+
 </footer>
 
 <script src="scripts/lib/jquery-3.4.1.min.js" type="application/javascript"></script>
